// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: TogglePanel should render case: 1 1`] = `
<Panel
  actions={
    Array [
      Object {
        "color": "orange",
        "component": [Function],
        "content": "Learn more",
        "to": undefined,
      },
    ]
  }
  title="Two-factor Authentication"
>
  <Panel.Section>
    <Grid>
      <Grid.Column
        xs={11}
      >
        <LabelledValue
          label="Status"
        >
          <h6>
            Required
          </h6>
          <p>
            All users must have two-factor authentication enabled to login to this account.
          </p>
        </LabelledValue>
      </Grid.Column>
      <Grid.Column
        xs={1}
      >
        <Toggle
          checked={true}
          id="enforceTfa"
          onChange={[Function]}
        />
      </Grid.Column>
    </Grid>
  </Panel.Section>
</Panel>
`;

exports[`Component: TogglePanel should render case: 2 1`] = `
<Panel
  actions={
    Array [
      Object {
        "color": "orange",
        "component": [Function],
        "content": "Learn more",
        "to": undefined,
      },
    ]
  }
  title="Two-factor Authentication"
>
  <Panel.Section>
    <Grid>
      <Grid.Column
        xs={11}
      >
        <LabelledValue
          label="Status"
        >
          <h6>
            Optional
          </h6>
          <p>
            Each user can manage their own two-factor authentication settings.
          </p>
        </LabelledValue>
      </Grid.Column>
      <Grid.Column
        xs={1}
      >
        <Toggle
          checked={false}
          id="enforceTfa"
          onChange={[Function]}
        />
      </Grid.Column>
    </Grid>
  </Panel.Section>
</Panel>
`;
